Tooltip z-index fix

--- a/assets/less/_monum.less
+++ b/assets/less/_monum.less
@@ -166,10 +166,11 @@
     margin-right:-1.618em;
   	li.slide {
   		.slide-content {
+    		left:auto;
     		top:10%;
     		width:50%;
-    		margin-left:2.08333%;
-        margin-right:2.08333%;
+    		margin-left:21px;
+        margin-right:0;
         padding:0;
         @media only screen and (min-width: 800px) and (max-width: 1200px) {
           top:2.08333%;
@@ -239,6 +240,9 @@
       display:block;
       margin:25px 0;
       text-align:left;
+    }
+    p {
+      font-size:0.875em;
     }
   }
   .summary {
@@ -376,6 +380,7 @@ div.swatch-wrapper {
       top:-50%;
       left:25px;
       width:180px;
+      z-index:1001;
       p {
         background:white;
         .border_radius(@borderradius);
